--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -167,4 +167,5 @@ LongReverbLengthCustom=0.000000
 [/Script/NavigationSystem.RecastNavMesh]
 TileSizeUU=1151.841187
 CellSize=1.000000
+RuntimeGeneration=Dynamic
 
