--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -95,9 +95,9 @@ AudioCallbackBufferFrameSize=1024
 AudioNumBuffersToEnqueue=1
 AudioMaxChannels=0
 AudioNumSourceWorkers=4
-SpatializationPlugin=Project Acoustics
-SourceDataOverridePlugin=Project Acoustics
-ReverbPlugin=Project Acoustics
+SpatializationPlugin=Built-in Spatialization
+SourceDataOverridePlugin=None
+ReverbPlugin=Built-in Reverb
 OcclusionPlugin=Built-in Occlusion
 CompressionOverrides=(bOverrideCompressionTimes=False,DurationThreshold=5.000000,MaxNumRandomBranches=0,SoundCueQualityIndex=0)
 CacheSizeKB=65536
