Put new Point close to the crying

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -60,14 +60,14 @@
 +CollisionChannelRedirects=(OldName="Hidespot",NewName="HideSpotTrace")
 
 [/Script/EngineSettings.GameMapsSettings]
-EditorStartupMap=/Game/FirstPerson/Maps/FirstPersonMap.FirstPersonMap
+EditorStartupMap=/Game/Obscura_Level_Tutorial.Obscura_Level_Tutorial
 LocalMapOptions=
 TransitionMap=
 bUseSplitscreen=True
 TwoPlayerSplitscreenLayout=Horizontal
 ThreePlayerSplitscreenLayout=FavorTop
 GameInstanceClass=/Script/Engine.GameInstance
-GameDefaultMap=/Game/FirstPerson/Maps/FirstPersonMap.FirstPersonMap
+GameDefaultMap=/Game/Obscura_Level_Tutorial.Obscura_Level_Tutorial
 ServerDefaultMap=/Engine/Maps/Entry
 GlobalDefaultGameMode=/Script/Obscura.ObscuraGameMode
 GlobalDefaultServerGameMode=None
