--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -11,10 +11,10 @@ InsertPack=(PackSource="StarterContent.upack",PackName="StarterContent")
 
 [/Script/UnrealEd.ProjectPackagingSettings]
 Build=IfProjectHasCode
-BuildConfiguration=PPBC_Development
+BuildConfiguration=PPBC_DebugGame
 BuildTarget=
 LaunchOnTarget=
-StagingDirectory=(Path="")
+StagingDirectory=(Path="C:/Users/lillt/Desktop/Obscura Build")
 FullRebuild=False
 ForDistribution=False
 IncludeDebugFiles=False
