--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -67,7 +67,7 @@ bUseSplitscreen=True
 TwoPlayerSplitscreenLayout=Horizontal
 ThreePlayerSplitscreenLayout=FavorTop
 GameInstanceClass=/Game/Blueprints/MyGameInstance.MyGameInstance_C
-GameDefaultMap=/Game/Obscura_Level_Tutorial.Obscura_Level_Tutorial
+GameDefaultMap=/Game/Menu.Menu
 ServerDefaultMap=/Engine/Maps/Entry
 GlobalDefaultGameMode=/Script/Obscura.ObscuraGameMode
 GlobalDefaultServerGameMode=None
