--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -67,7 +67,7 @@ bUseSplitscreen=True
 TwoPlayerSplitscreenLayout=Horizontal
 ThreePlayerSplitscreenLayout=FavorTop
 GameInstanceClass=/Script/Engine.GameInstance
-GameDefaultMap=/Game/Obscura_Level_Tutorial.Obscura_Level_Tutorial
+GameDefaultMap=/Game/Menu/MainMenu.MainMenu
 ServerDefaultMap=/Engine/Maps/Entry
 GlobalDefaultGameMode=/Script/Obscura.ObscuraGameMode
 GlobalDefaultServerGameMode=None
