--- a/Config/DefaultInput.ini
+++ b/Config/DefaultInput.ini
@@ -103,6 +103,8 @@ DefaultViewportMouseLockMode=LockOnCapture
 FOVScale=0.011110
 DoubleClickTime=0.200000
 +ActionMappings=(ActionName="Hide",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=E)
++ActionMappings=(ActionName="Pause",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=P)
++ActionMappings=(ActionName="Pause",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=Gamepad_Special_Right)
 +AxisMappings=(AxisName="Horizontal",Scale=1.000000,Key=D)
 +AxisMappings=(AxisName="Vertical",Scale=1.000000,Key=W)
 +AxisMappings=(AxisName="Horizontal",Scale=-1.000000,Key=A)
@@ -114,4 +116,8 @@ DefaultTouchInterface=/Engine/MobileResources/HUD/DefaultVirtualJoysticks.Defaul
 -ConsoleKeys=Tilde
 +ConsoleKeys=Tilde
 +ConsoleKeys=Section
+
+[EnhancedInputPlatformSettings_Windows EnhancedInputPlatformSettings]
++InputData=None
+bShouldLogMappingContextRedirects=False
 
