Start of Parameterfile system

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -173,3 +173,6 @@ TileSizeUU=1151.841187
 CellSize=1.000000
 RuntimeGeneration=Dynamic
 
+
+[CoreRedirects]
++ClassRedirects=(OldName="/Script/Obscura.ReadWriteParameters",NewName="/Script/Obscura.ReadWriteParameters")
