--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -13,8 +13,6 @@ InsertPack=(PackSource="StarterContent.upack",PackName="StarterContent")
 Build=IfProjectHasCode
 BuildConfiguration=PPBC_DebugGame
 BuildTarget=
-LaunchOnTarget=
-StagingDirectory=(Path="C:/Users/mela3493/Desktop")
 FullRebuild=True
 ForDistribution=False
 IncludeDebugFiles=False
@@ -107,8 +105,8 @@ bSkipMovies=False
 +DirectoriesToAlwaysCook=(Path="/Interchange/Materials")
 +DirectoriesToAlwaysCook=(Path="/Interchange/Pipelines")
 +DirectoriesToAlwaysCook=(Path="/Interchange/Utilities")
++DirectoriesToAlwaysCook=(Path="/Game/TextFiles")
 +DirectoriesToAlwaysStageAsUFS=(Path="Acoustics")
-PerPlatformBuildConfig=(("Windows", PPBC_DebugGame))
-PerPlatformTargetFlavorName=(("Android", "Android_ASTC"))
-PerPlatformBuildTarget=()
++DirectoriesToAlwaysStageAsUFS=(Path="TextFiles")
++DirectoriesToAlwaysStageAsNonUFS=(Path="TextFiles")
 
