--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -125,6 +125,7 @@ DefaultGraphicsPerformance=Maximum
 AppliedDefaultGraphicsPerformance=Maximum
 
 [/Script/Engine.Engine]
+GameUserSettingsClassName=/Script/Obscura.ObscuraSettings
 +ActiveGameNameRedirects=(OldGameName="TP_FirstPerson",NewGameName="/Script/Obscura")
 +ActiveGameNameRedirects=(OldGameName="/Script/TP_FirstPerson",NewGameName="/Script/Obscura")
 +ActiveClassRedirects=(OldClassName="TP_FirstPersonProjectile",NewClassName="ObscuraProjectile")
